Clean up a lot of IDE warnings